# eir

./: .envrc  .gitignore  ARCHITECTURE.md  CLAUDE.md  DISTRIBUTION.md  DNG_CONVERSION_INVESTIGATION.md  GITHUB_SECRETS_SETUP.md  PACKAGING.md  README.md  build.py  logging.yaml  package_build.py  pyproject.toml  test_dnglab_debug.py  validate_patches.py
.github/scripts/: AgentInfo.sh  build.py  build_nuitka.py  build_pyinstaller.py.bak  check_release_tags.sh  create_github_release.sh  download_dnglab.ps1  download_dnglab.py  download_dnglab.sh  download_dnglab_linux.sh  download_dnglab_macos.sh  download_dnglab_windows.ps1  handle_release_tags.sh  organize_packages.sh  package_build.py  publish_apt.sh  publish_chocolatey.sh  publish_homebrew.sh  setup_chocolatey_test_env.ps1  test_apt_package.sh  test_binary.ps1  test_binary.sh  test_chocolatey_package.ps1  test_homebrew_package.sh  version_bump.py  version_bump.sh
.github/workflows/: build_release_publish.yml  pipeline.yml  release.yml  run_tests.yml  run_unit_tests.yml
chocolatey/: eir.nuspec
chocolatey/tools/: chocolateyinstall.ps1  chocolateyuninstall.ps1
debian/: control  install  rules
docs/: ARCHITECTURE.md  CHOCOLATEY_TESTING.md  CLAUDE.md  DISTRIBUTION.md  GITHUB_SECRETS_SETUP.md  PACKAGE_TESTING.md  PACKAGING.md  index.html
homebrew/: eir.rb
packaging/chocolatey/: eir.nuspec
packaging/debian/: changelog  control  copyright
packaging/homebrew/: eir.rb
scripts/: setup_apt_repo.sh
src/eir/: __init__.py  abk_common.py  build_constants.py  cli.py  clo.py  constants.py  dnglab_strategy.py  epr.py  logger_manager.py  processor.py
tests/: conftest.py  setup_mixed_test_directory.py  test_abk_common.py  test_cli.py  test_clo.py  test_constants.py  test_dnglab_strategy.py  test_integration_real_images.py  test_logger_manager.py  test_processor.py  test_processor_enhanced.py
tests/integration/: setup_mixed_test_directory.py  test_integration_real_images.py
tests/integration/test_images/20110709_canon/: IMG_035.cr2  IMG_036.cr2
tests/integration/test_images/20221231_iPhone_raw/: IMG_3823.HEIC  IMG_3825.HEIC
tools/: download_dnglab.sh
