[project]
name = "eir"
version = "0.1.97"
description = "EXIF-based image renamer and converter"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [
    { name = "ABK", email = "alexbigkid@users.noreply.github.com"}
]
maintainers = [
    { name = "ABK", email = "alexbigkid@users.noreply.github.com"}
]
keywords = ["exif", "images", "pictures", "rename", "convert"]
dependencies = [
    "colorama",
    "pydngconverter",
    "PyExifTool",
    "PyYAML",
    "reactivex>=4.0.4",
]


[dependency-groups]
dev = [
    "coverage",
    "parameterized",
    "ruff",
    "pytest",
    "pytest-asyncio",
    "pytest-cov"
]
debug = [
    "build",
    "setuptools",
    "twine",
    "pip-check",
    "pip-date",
    "pip-chill",
    "pipdeptree",
    "pre-commit",
    "wheel",
    "pyinstaller>=6.14.1",
]


[project.scripts]
eir = "eir.cli:main"


[tool.uv]
managed = true


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.hatch.build.targets.wheel]
include = ["src/eir"]
sources = ["src"]


[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
# Exclude integration tests from default discovery
norecursedirs = ["tests/integration"]
filterwarnings = [
    "ignore::DeprecationWarning:reactivex.*",
    "ignore:coroutine.*was never awaited:RuntimeWarning",
]


markers = [
    "integration: marks tests as integration tests with real images (deselect with '-m \"not integration\"')",
    "pipeline_only: marks tests that run only in CI pipeline",
]


[tool.coverage.run]
source = ["eir"]
branch = true


[tool.coverage.report]
show_missing = true
skip_covered = true


[tool.ruff]
line-length = 98
indent-width = 4
src = ["src", "tests"]


[tool.ruff.lint]
preview = true
select = [
    # pycodestyle
    "E",
    "W",
    # pydocstyle
    "D",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    "E302",
    "F401"
]
extend-ignore = ["D203", "E231", "E202", "S108"]


[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]  # Allow assert statements
"package_build.py" = ["S607"]  # Allow subprocess with partial executable paths (dpkg-deb, dpkg-scanpackages, gzip, choco)
".github/scripts/build.py" = ["S603", "S607"]  # Allow subprocess calls for build scripts (powershell, bash)


[tool.ruff.lint.pydocstyle]
convention = "google"


[tool.ruff.format]
line-ending = "lf"
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = true
docstring-code-format = true


[tool.ruff.lint.isort]
lines-after-imports = 2


[tool.hatch.build]
include = ["src/eir"]
